Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-26829

QtcProcess is slower than QProcess

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 6.0.2
    • Qt Creator 6.0.0
    • All Other Issues
    • None
    • macOS, Windows
    • bcee5c5dc4 (qt-creator/qt-creator/6.0) bcee5c5dc4 (qt-creator/qt-creator/master) bcee5c5dc4 (qt-creator/qt-creator/qmlprojectstorage) bcee5c5dc4 (qt-creator/qt-creator/qds-3.0)

      At https://bugreports.qt.io/browse/QTCREATORBUG-26754 we could see that by using QtcProcess insted of QProcess the ProcessCreator in Clangsupport was 3-4x slower on Windows, and 8x slower on macOS.

      This means that the slowness can happen on other processes started using QtcProcess but not easily noticeable as the C++ code completion.

       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            con Eike Ziller
            cadam Cristian Adam
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes