ClangCodeModel: Fix performance regression of code completion

Broke when converting the code to QtcProcess.

Amends 8724a4efbb065d4a146cb35929870d3715132127

Fixes: QTCREATORBUG-26829
Change-Id: I14b4bd9ddc035c1c837231cb6436d9e8e203d5cd
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>
Reviewed-by: hjk <hjk@qt.io>